--- a/web-server/public/wrong.html
+++ b/web-server/public/wrong.html
@@ -9,10 +9,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>クイズ : 1 + 1 は？</h1>
-    <form action="/api/v1/quiz" method="POST">
-      <input type="text" name="answer" placeholder="答えを入力" />
-      <button type="submit">送信</button>
-    </form>
+    <h1>不正解</h1>
   </body>
 </html>
